//
//  accessibilityIdentifier.swift
//  Calculator
//
//  Created by 이정민 on 2022/09/29.
//

import Foundation

enum AccessibilityIdentifier {
    static let calculatorDisplayLabel = "calculatorDisplayLabel"
    static let operatorDisplayLabel = "operatorDisplayLabel"
    static let calculatorArchive = "calculatorArchive"
}
