//
//  CalculatorSignType.swift
//  Calculator
//
//  Created by Derrick kim on 2022/05/23.
//

import Foundation

enum CalculatorOtherSigns: String {
    case dot = "."
    case doubleZero = "00"
    case clearEntry = "CE"
    case allClear = "AC"
    case plusMinus = "⁺⁄₋"
    case result = "="
}
